# Studyfied-project

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  DEVLOG.md  PR_DESCRIPTION.md  README.md  api_usage.md  docker-compose.override.yml.example  docker-compose.yml  review.md  tailwindv4.md
.kiro/agents/: code-researcher.json  traycer-agile.json
.kiro/docs/: traycer-schema.md
.kiro/prompts/: architecture-validation.md  code-researcher.md  commit.md  core-flows.md  epic-brief.md  implementation-validation.md  phase-breakdown.md  plan-mode.md  prd-validation.md  pre-commit-review.md  task-mode.md  tech-plan.md  ticket-breakdown.md
.kiro/settings/: mcp.json
.kiro/specs/: Architecture_Validation_Report.md  Core_Flows__Student_Learning_Journey.md  (+5 more)
.kiro/tickets/: T7_backup.md  (+9 more)
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/routers/: analyze.py  generate_assets.py  generate_lesson.py  health.py
backend/app/schemas/: __init__.py  ai_provider.py  analyze.py  generation_config.py  image_generation.py  lesson.py
backend/app/services/: ai_director.py  asset_factory.py  content_ingestor.py  exceptions.py  gemini_rest_client.py  image_steering.py  json_utils.py  librarian.py  openai_compatible_client.py  sjinn_tool_client.py  tts_service.py
docs/: APIfree.md  T0__Prompt_Engineering_&_AI_Quality_Tuning.md  architecture.md  code.html  prd.md  prompt-spec.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+59 files in other folders)
