[project]
name = "studyfied-backend"
version = "0.1.0"
description = "Studyfied Backend - AI-powered educational content generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "crawl4ai[async]>=0.8.0",
    "pymupdf>=1.26.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.6",
    "aiohttp>=3.9.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
